--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "lint-fix": "vue-cli-service lint --fix"
   },
   "dependencies": {
+ 
     "bootstrap": "4.6.0",
     "cache-loader": "^4.1.0",
     "chartist": "0.11.0",
+    "core-js": "^2.5.7",
     "google-maps": "3.2.1",
     "register-service-worker": "1.7.2",
     "v-tooltip": "2.0.0-rc.33",
@@ -28,10 +30,10 @@
     "@vue/cli-plugin-eslint": "3.12.1",
     "@vue/cli-plugin-pwa": "3.12.1",
     "@vue/cli-service": "3.12.1",
+    "cross-env": "^7.0.3",
     "sass": "1.56.2",
     "sass-loader": "10.1.1",
-    "vue-template-compiler": "2.7.14",
-    "cross-env": "^7.0.3"
+    "vue-template-compiler": "2.7.14"
   },
   "browserslist": [
     "> 1%",
